overflow fix

--- a/src/ui/Chat.module.css
+++ b/src/ui/Chat.module.css
@@ -92,6 +92,10 @@
   font-size: 0.85em;
 }
 
+.msgText {
+	overflow-wrap: anywhere;
+}
+
 .leftMsg .msgBubble {
   border-bottom-left-radius: 0;
 }
